--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        font-weight: normal;
         gap: 0.825rem;
         color: #000;
         text-decoration: none;
