--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        font-weight: normal;
         gap: 0.825rem;
         color: #000;
         text-decoration: none;
+      }
+
+      #logo > h1 {
+        font-weight: 300;
       }
 
       #menu {
